minor fix on overflow

--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,13 @@ body {
   display: none;
 }
 
+canvas {
+  display: block;
+  max-width: 100%;
+  max-height: 100%;
+  overflow: hidden;
+}
+
 @keyframes gradient-shift {
   0% {
     background-position: 0% 50%;
